--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
-# vim:ts=4:sw=4:expandtab:autoindent:
+# vim:ts=4:sw=4:expandtab:autoindent
+cmake_minimum_required(VERSION 3.31)
+project(doxygen)
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/deps/TinyDeflate
