--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -107,7 +107,10 @@ jobs:
     - name: Install localization files (Linux)
       run: |
         echo "download translation as seperate package..."
-        sudo apt install gettext libgettextpo-dev libiconv-hook-dev
+        sudo apt update --fix-missing
+        sudo apt upgrade
+        sudo apt update
+        sudo apt install gettext
         git clone https://github.com/paule32/doxygen-translations.git
         mkdir -p build/bin
         mkdir -p gettext/inc
