--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -198,6 +198,9 @@ jobs:
 
     - name: Install gettext for localization (MacOS)
       run: |
+        brew update
+        brew install gettext
+        brew link --force gettext
         export PKG_CONFIG_PATH="/opt/homebrew/opt/gettext/lib/pkgconfig:$PKG_CONFIG_PATH"
         pkg-config --libs --cflags gettext
         brew info gettext
