--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -455,13 +455,13 @@ if(UNIX)
     )
 endif()
 
-if(APPLE)
-    message(STATUS "Building for macOS: Adding alternative libraries")
-    find_library(Intl_LIBRARY NAMES intl)
-    find_path(Intl_INCLUDE_DIR NAMES libintl.h)
-    target_include_directories(doxygen PRIVATE ${Intl_INCLUDE_DIR})
-    target_link_libraries(doxygen PRIVATE ${Intl_LIBRARY})
-endif()
+#if(APPLE)
+#    message(STATUS "Building for macOS: Adding alternative libraries")
+#    find_library(Intl_LIBRARY NAMES intl)
+#    find_path(Intl_INCLUDE_DIR NAMES libintl.h)
+#    target_include_directories(doxygen PRIVATE ${Intl_INCLUDE_DIR})
+#    target_link_libraries(doxygen PRIVATE ${Intl_LIBRARY})
+#endif()
 
 set_project_warnings(doxycfg)
 set_project_warnings(doxymain)
