--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -14,29 +14,58 @@ jobs:
       matrix:
         config:
         - {
-            name: "Ubuntu Latest GCC Release",
+            name: "Ubuntu Latest GCC Release (Intel)",
             os: ubuntu-20.04,
             build_type: "Release", cc: "gcc", cxx: "g++",
             build_gen: "Unix Makefiles",
             cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES"
           }
         - {
-            name: "Ubuntu Latest GCC Debug",
+            name: "Ubuntu Latest GCC Debug (Intel)",
             os: ubuntu-20.04,
             build_type: "Debug", cc: "gcc", cxx: "g++",
             build_gen: "Unix Makefiles",
             cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES"
           }
         - {
-            name: "Ubuntu Latest Clang Release",
+            name: "Ubuntu Latest Clang Release (Intel)",
             os: ubuntu-20.04,
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles",
             cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO"
           }
         - {
-            name: "Ubuntu Latest Clang Debug",
+            name: "Ubuntu Latest Clang Debug (Intel)",
             os: ubuntu-20.04,
+            build_type: "Debug", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles",
+            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO"
+          }
+
+        - {
+            name: "Ubuntu Latest GCC Release (Arm)",
+            os: ubuntu-22.04-arm,
+            build_type: "Release", cc: "gcc", cxx: "g++",
+            build_gen: "Unix Makefiles",
+            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES"
+          }
+        - {
+            name: "Ubuntu Latest GCC Debug (Arm)",
+            os: ubuntu-22.04-arm,
+            build_type: "Debug", cc: "gcc", cxx: "g++",
+            build_gen: "Unix Makefiles",
+            cmake_extra_opts: "-Dbuild_search=YES -Dbuild_app=YES -Dbuild_parse=YES"
+          }
+        - {
+            name: "Ubuntu Latest Clang Release (Arm)",
+            os: ubuntu-22.04-arm,
+            build_type: "Release", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles",
+            cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO"
+          }
+        - {
+            name: "Ubuntu Latest Clang Debug (Arm)",
+            os: ubuntu-22.04-arm,
             build_type: "Debug", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles",
             cmake_extra_opts: "-Duse_libclang=YES -Dstatic_libclang=YES -Duse_libc++=NO"
