Disable PAGE_OUTLINE_PANEL for user manual and examples

--- a/examples/baseexample.cfg
+++ b/examples/baseexample.cfg
@@ -7,4 +7,6 @@ LATEX_HIDE_INDICES = YES
 COMPACT_LATEX      = YES
 WARN_AS_ERROR      = FAIL_ON_WARNINGS
 HTML_PROJECT_COOKIE = doxygen_docs
+PAGE_OUTLINE_PANEL = NO
+HTML_COLORSTYLE_SAT = 40
 @INCLUDE = $(EXTRA_SETTINGS)
