Linking doxygen under Cygwin
Since the last update of the German translator (good and necessary, #11570) the compilation under Cygwin gives problems:
```
/usr/lib/gcc/x86_64-pc-cygwin/12/../../../../x86_64-pc-cygwin/bin/as: CMakeFiles/doxymain.dir/language.cpp.o: too many sections (32796)
/tmp/ccdnzEmx.s: Assembler messages:
/tmp/ccdnzEmx.s: Fatal error: can't write 14 bytes to section .text of CMakeFiles/doxymain.dir/language.cpp.o: 'file too big'
/usr/lib/gcc/x86_64-pc-cygwin/12/../../../../x86_64-pc-cygwin/bin/as: CMakeFiles/doxymain.dir/language.cpp.o: too many sections (32796)
/tmp/ccdnzEmx.s: Fatal error: CMakeFiles/doxymain.dir/language.cpp.o: file too big
make[2]: *** [src/CMakeFiles/doxymain.dir/build.make:1672: src/CMakeFiles/doxymain.dir/language.cpp.o] Error 1
```

by setting the `big-obj` option this can be overcome.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,9 @@ if (CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
    if (CMAKE_BUILD_TYPE STREQUAL  "")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1")
    endif()
+   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wa,-mbig-obj")
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
+   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wa,-mbig-obj")
 endif()
 
 if (WIN32 AND MSVC)
