--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -218,6 +218,7 @@ jobs:
       run: |
          brew install --force --overwrite python@3.11 # temp hack
          brew install --force --overwrite python@3.12 # temp hack
+         brew install --force --overwrite python@3.13 # temp hack
          brew update
          brew install libxml2
       if: startsWith(matrix.config.os,'macos-')
