qt: Default to Qt 6 instead of Qt 5

--- a/addon/doxywizard/CMakeLists.txt
+++ b/addon/doxywizard/CMakeLists.txt
@@ -1,46 +1,37 @@
-if (force_qt STREQUAL "Qt5" OR NOT force_qt)
-  find_package(Qt5Core QUIET CONFIG)
-  if (Qt5Core_FOUND)
-    message(STATUS "Using Qt5")
-    find_package(Qt5 COMPONENTS Widgets Gui Xml)
-    macro(qt_wrap_cpp)
-      qt5_wrap_cpp(${ARGN})
-    endmacro()
-    macro(qt_add_resources)
-      qt5_add_resources(${ARGN})
-    endmacro()
-  else()
-    if (NOT force_qt)
-      find_package(Qt6Core QUIET CONFIG)
-      if (Qt6Core_FOUND)
-        message(STATUS "Using Qt6")
-        find_package(Qt6 COMPONENTS Widgets Gui Xml)
-        macro(qt_wrap_cpp)
-          qt6_wrap_cpp(${ARGN})
-        endmacro()
-        macro(qt_add_resources)
-          qt6_add_resources(${ARGN})
-        endmacro()
-      else()
-        message(FATAL_ERROR "Qt5 nor Qt6 found")
-      endif()
-    else()
-      message(FATAL_ERROR "Qt5 not found")
-    endif()
-  endif()
-else()
+# Try finding Qt6
+if (force_qt STREQUAL "Qt6" OR NOT force_qt)
   find_package(Qt6Core QUIET CONFIG)
   if (Qt6Core_FOUND)
     message(STATUS "Using Qt6")
-    find_package(Qt6 COMPONENTS Widgets Gui Xml)
+    find_package(Qt6 REQUIRED COMPONENTS Widgets Gui Xml)
     macro(qt_wrap_cpp)
       qt6_wrap_cpp(${ARGN})
     endmacro()
     macro(qt_add_resources)
       qt6_add_resources(${ARGN})
     endmacro()
-  else()
+  elseif (force_qt STREQUAL "Qt6")
+    # no fallback to Qt5
     message(FATAL_ERROR "Qt6 not found")
+  endif()
+endif()
+
+# Try finding Qt5
+if (force_qt STREQUAL "Qt5" OR NOT Qt6_FOUND)
+  find_package(Qt5Core QUIET CONFIG)
+  if (Qt5Core_FOUND)
+    message(STATUS "Using Qt5")
+    find_package(Qt5 REQUIRED COMPONENTS Widgets Gui Xml)
+    macro(qt_wrap_cpp)
+      qt5_wrap_cpp(${ARGN})
+    endmacro()
+    macro(qt_add_resources)
+      qt5_add_resources(${ARGN})
+    endmacro()
+  elseif (force_qt STREQUAL "Qt5")
+    message(FATAL_ERROR "Qt5 not found")
+  else()
+    message(FATAL_ERROR "Qt5 nor Qt6 found")
   endif()
 endif()
 
@@ -182,12 +173,10 @@ endif()
 
 if(Qt5Core_FOUND)
   target_link_libraries(doxywizard Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Xml doxygen_version)
-else()
-if(Qt6Core_FOUND)
+elseif(Qt6Core_FOUND)
   target_link_libraries(doxywizard Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Xml doxygen_version)
 else()
   target_link_libraries(doxywizard ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY} doxygen_version)
-endif()
 endif()
 
 install(TARGETS doxywizard DESTINATION bin)
