--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ if (use_sys_sqlite3)
         find_package(SQLite3 REQUIRED)
 endif()
 if (build_wizard)
-    if (force_qt STREQUAL "Qt6")
+    if (NOT force_qt STREQUAL "Qt5")
         if (CMAKE_SYSTEM MATCHES "Darwin")
             set(MACOS_VERSION_MIN 10.15)
         endif()
