--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -178,16 +178,16 @@ jobs:
         sudo apt install libxapian-dev
       if: matrix.config.os == 'ubuntu-22.04' || matrix.config.os == 'ubuntu-24.04-arm'
 
-    - name: Install LaTeX (Windows)
-      uses: teatimeguest/setup-texlive-action@v3
-      with:
-        packages: >-
-          scheme-medium
-          collection-latexextra
-          babel-dutch
-          cjk
-          bibtex
-      if: matrix.config.os == 'windows-latest'
+#    - name: Install LaTeX (Windows)
+#      uses: teatimeguest/setup-texlive-action@v3
+#      with:
+#        packages: >-
+#          scheme-medium
+#          collection-latexextra
+#          babel-dutch
+#          cjk
+#          bibtex
+#      if: matrix.config.os == 'windows-latest'
 
     - name: Install Ghostscript (Linux)
       run: |
@@ -321,12 +321,12 @@ jobs:
         python --version;
         echo "=== cmake ===";
         cmake --version;
-        echo "=== latex ===";
-        latex --version;
-        echo "=== bibtex ===";
-        bibtex --version
-        echo "=== dvips ===";
-        dvips --version
+        #echo "=== latex ===";
+        #latex --version;
+        #echo "=== bibtex ===";
+        #bibtex --version
+        #echo "=== dvips ===";
+        #dvips --version
         echo "=== bison ===";
         win_bison --version;
         echo "=== flex ===";
@@ -399,21 +399,21 @@ jobs:
         endif()
       if: matrix.config.os != 'windows-latest'
 
-    - name: Run tests (Windows)
-      shell: cmake -P {0}
-      run: |
-        set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
-
-        execute_process(
-          COMMAND
-            cmake -E env TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --man --pdf"
-            cmake --build build --target tests
-          RESULT_VARIABLE result
-        )
-        if (NOT result EQUAL 0)
-          message(FATAL_ERROR "Running tests failed!")
-        endif()
-      if: matrix.config.os == 'windows-latest'
+#    - name: Run tests (Windows)
+#      shell: cmake -P {0}
+#      run: |
+#        set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
+#
+#        execute_process(
+#          COMMAND
+#            cmake -E env TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --man --pdf"
+#            cmake --build build --target tests
+#          RESULT_VARIABLE result
+#        )
+#        if (NOT result EQUAL 0)
+#          message(FATAL_ERROR "Running tests failed!")
+#        endif()
+#      if: matrix.config.os == 'windows-latest'
 
     - name: Generate documentation
       shell: cmake -P {0}
@@ -425,6 +425,7 @@ jobs:
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Building documentation failed")
         endif()
+      if: matrix.config.os == 'windows-latest'
 
     - name: Archive html documentation artifacts
       uses: actions/upload-artifact@v4
